--- a/datospesonales.html
+++ b/datospesonales.html
@@ -6,6 +6,8 @@
 	<div>Apellidos: Ocampo Aguirre</div>
 	<div>Fecha de nacimiento: 13 de julio de 1988</div>
 	<div>Lugar de nacimiento: Aranzazu caldas</div>
+	<div>hobbies:musica, videojuegos, comida, turismo,cine</div>
+
 </head>
 <body>
 
